// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bitwise-or-operator.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<template>
  <div>
    {{
      fn(
        bitwise | or | operator | a_long_long_long_long_long_long_long_long_long_long_variable
      )
      | filter1
      | filter2
      | filter3
      | filter4
    }}
  </div>
</template>

=====================================output=====================================
<template>
  <div>
    {{
      fn(
        bitwise |
          or |
          operator |
          a_long_long_long_long_long_long_long_long_long_long_variable,
      )
        | filter1
        | filter2
        | filter3
        | filter4
    }}
  </div>
</template>

================================================================================
`;

exports[`comment-after-interpolation.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<template>
  <legend>{{ $t('package') }}<!-- #238 --></legend><!-- this gets ugly -->

  <legend>{{ $t('package') }}</legend> <!-- this is ok -->

  <legend>{{ $t('package') }}<!-- comment after interpolation comment after interpolation --></legend>

  <legend><b>inline</b>{{ $t('package') }}<!-- glued comment --></legend>
</template>

=====================================output=====================================
<template>
  <legend>{{ $t("package") }}<!-- #238 --></legend>
  <!-- this gets ugly -->

  <legend>{{ $t("package") }}</legend>
  <!-- this is ok -->

  <legend>
    {{
      $t("package")
    }}<!-- comment after interpolation comment after interpolation -->
  </legend>

  <legend><b>inline</b>{{ $t("package") }}<!-- glued comment --></legend>
</template>

================================================================================
`;

exports[`parenthesized.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<template>
<span>{{(a||          b)}} {{z&&(a&&b)}}</span>
</template>

=====================================output=====================================
<template>
  <span>{{ a || b }} {{ z && a && b }}</span>
</template>

================================================================================
`;

exports[`template.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<template>
  <root>
<div class="red">
    We are going to add this simple card here
  </div>
  <div class="red">
    What is going on {{ prop1 }} and {{ prop2 }}
  </div>
  </root>
</template>

=====================================output=====================================
<template>
  <root>
    <div class="red">We are going to add this simple card here</div>
    <div class="red">What is going on {{ prop1 }} and {{ prop2 }}</div>
  </root>
</template>

================================================================================
`;
